fix: pequenas melhorias nas animações e z-index

--- a/src/components/Content/BottomCreationStepperSkeleton/styles.scoped.css
+++ b/src/components/Content/BottomCreationStepperSkeleton/styles.scoped.css
@@ -81,7 +81,7 @@
 }
 
 .skeleton-box {
-  height: 372px;
+  height: 490px;
   display: flex;
   align-items: center;
   justify-content: center;
